can add pics on static page

--- a/app/views/reflections/index.html.erb
+++ b/app/views/reflections/index.html.erb
@@ -5,7 +5,7 @@
   </div>
 
   <div align="center" class="button_category" style="float: right">
-    <%= button_to "Pictures", root_path, class:"button", method: :get %>
+    <%= button_to "Pictures", page_path('statpics'), class:"button", method: :get %>
   </div>
 </div>
 
@@ -22,7 +22,7 @@
 </div>
 </br>
 <div class="bio_text">
-  <h3>Anthony Marquez was born in a small town called Pontevedra, which is in Galicia, Spain. His mother was Maria Marquez Gonzalez and his father was Herarldo Marquez. They lived on a small farm that grew corn, potatoes, and children! There were some cows, rats, toads, and frogs. Life was tough and there was never enough food. His father died in 1941 as a result of having different beliefs than the church and the fascists. Tony was the oldest of 5 children, that also included Josefina, Jose, Rosa, and "Henry of Spain" (aka Enrique).</h3>
+  <h3>Anthony BETTTY was born in a small town called Pontevedra, which is in Galicia, Spain. His mother was Maria Marquez Gonzalez and his father was Herarldo Marquez. They lived on a small farm that grew corn, potatoes, and children! There were some cows, rats, toads, and frogs. Life was tough and there was never enough food. His father died in 1941 as a result of having different beliefs than the church and the fascists. Tony was the oldest of 5 children, that also included Josefina, Jose, Rosa, and "Henry of Spain" (aka Enrique).</h3>
 
   <%= image_tag("map of spain.jpg", class:"right") %>
 
