added gitignore and bootstrap

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,11 @@
     <title>AnthonyMarquez</title>
     <%= csrf_meta_tags %>
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Parisienne|Rye|Source+Sans+Pro" rel="stylesheet">
+    <!-- Required meta tags -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta charset="UTF-8">
     <!-- If IE use the latest rendering engine -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Set the page to the width of the device and set the zoon level -->
-    <meta name="viewport" content="width = device-width, initial-scale = 1">
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
